Use correct font-size on mobile

--- a/private/less/maki.less
+++ b/private/less/maki.less
@@ -157,7 +157,7 @@ a, u {
     /*min-height: 350px;*/
   }
   .masthead h1.ui.header {
-    font-size: 2em;
+    /*font-size: 2em;*/
     margin-top: 1.5em;
   }
   .masthead h2 {
